tests/type_errors/adding_strings_is_not_allowed.sy
mod A


def i
  : forall a. let Num a. a -> a
  : a = a + a

-- NOTE: this program will compile `i ' "ABC"` because the indirection discards the requirements
def main : Str = i "ABC"

--+ expected exit status: 1
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ t26
--+ ----
--+ Str
--+ 
--+ tests/type_errors/adding_strings_is_not_allowed.sy
--+   9| def main : Str = i "ABC"
--+  10|

